Fix GitHub Actions workflow configurations

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,37 +26,42 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('crules/requirements.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
 
       - name: Install dependencies
         run: |
+          cd crules
           python -m pip install --upgrade pip
-          pip install -r crules/requirements.txt
+          pip install -r requirements.txt
           pip install -e .
           pip install black isort flake8 pytest pytest-cov
 
       - name: Check code formatting with black
         run: |
+          cd crules
           black . --check
 
       - name: Check import sorting with isort
         run: |
+          cd crules
           isort . --check-only
 
       - name: Lint with flake8
         run: |
+          cd crules
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 
       - name: Test with pytest and generate coverage report
         run: |
+          cd crules
           pytest --cov=crules --cov-report=xml
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v3
         with:
-          file: ./coverage.xml
+          file: ./crules/coverage.xml
           fail_ci_if_error: true
 
   build:
@@ -72,15 +77,17 @@ jobs:
 
       - name: Install build dependencies
         run: |
+          cd crules
           python -m pip install --upgrade pip
           pip install build
 
       - name: Build package
         run: |
+          cd crules
           python -m build
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
         with:
           name: dist
-          path: dist/
+          path: crules/dist/
