--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,15 +20,18 @@ jobs:
           python-version: "3.10"
       - name: Install dependencies
         run: |
+          cd crules
           python -m pip install --upgrade pip
           pip install build
       - name: Build and package
-        run: python -m build
+        run: |
+          cd crules
+          python -m build
       - name: Upload Release Asset
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            dist/*.whl
-            dist/*.tar.gz
+            crules/dist/*.whl
+            crules/dist/*.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
