--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('crules/requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
 
@@ -56,7 +56,7 @@ jobs:
       - name: Test with pytest and generate coverage report
         run: |
           cd crules
-          pytest --cov=crules --cov-report=xml
+          pytest tests/unit -v --cov=crules --cov-report=xml
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v3
