--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     strategy:
       matrix:
         python-version: [3.8, 3.9, "3.10"]
@@ -77,7 +77,7 @@ jobs:
           fail_ci_if_error: true
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     needs: test
     steps:
       - uses: actions/checkout@v3
