--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,9 +68,10 @@ jobs:
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v3
+        continue-on-error: true
         with:
           file: ./crules/coverage.xml
-          fail_ci_if_error: true
+          fail_ci_if_error: false
 
   build:
     runs-on: macos-latest
