fix: use existing crules-tap-token in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
     steps:
       - name: Update Homebrew tap
         env:
-          HOMEBREW_TAP_TOKEN: ${{ secrets.HOMEBREW_TAP_TOKEN }}
+          HOMEBREW_TAP_TOKEN: ${{ secrets.crules-tap-token }}
         run: |
           # タップリポジトリをクローン
           git clone https://github.com/tirano-tirano/homebrew-crules.git
