--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Get current version
         id: get_version
         run: |
-          CURRENT_VERSION=$(grep 'version = ' crules/setup.py | cut -d'"' -f2)
+          CURRENT_VERSION=$(grep 'version = ' setup.py | cut -d'"' -f2)
           echo "current_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
 
       - name: Determine version bump
@@ -89,9 +89,9 @@ jobs:
       - name: Update version in setup.py
         if: steps.bump_version.outputs.bump != 'none'
         run: |
-          sed -i '' "s/version = \".*\"/version = \"${{ steps.new_version.outputs.new_version }}\"/" crules/setup.py
+          sed -i "s/version = \".*\"/version = \"${{ steps.new_version.outputs.new_version }}\"/" setup.py
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add crules/setup.py
+          git add setup.py
           git commit -m "chore: bump version to ${{ steps.new_version.outputs.new_version }}"
           git push
