--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -24,7 +24,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install conventional-changelog
+          pip install -r requirements.txt
+          pip install python-conventional-changelog
 
       - name: Get current version
         id: get_version
