feat: improve version management in auto-release workflow

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Get current version
         id: get_version
         run: |
-          CURRENT_VERSION=$(grep 'version = ' setup.py | cut -d'"' -f2)
+          CURRENT_VERSION=$(grep '__version__ = ' crules/crules/__init__.py | cut -d'"' -f2)
           echo "current_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
 
       - name: Determine version bump
@@ -69,6 +69,22 @@ jobs:
             esac
           fi
 
+      - name: Update version in files
+        if: steps.bump_version.outputs.bump != 'none'
+        run: |
+          # Update version in setup.py
+          sed -i "s/version=\".*\"/version=\"${{ steps.new_version.outputs.new_version }}\"/" setup.py
+
+          # Update version in __init__.py
+          sed -i "s/__version__ = \".*\"/__version__ = \"${{ steps.new_version.outputs.new_version }}\"/" crules/crules/__init__.py
+
+          # Commit the changes
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add setup.py crules/crules/__init__.py
+          git commit -m "chore: bump version to ${{ steps.new_version.outputs.new_version }}"
+          git push
+
       - name: Create Release
         if: steps.bump_version.outputs.bump != 'none'
         uses: softprops/action-gh-release@v1
@@ -86,13 +102,3 @@ jobs:
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Update version in setup.py
-        if: steps.bump_version.outputs.bump != 'none'
-        run: |
-          sed -i "s/version = \".*\"/version = \"${{ steps.new_version.outputs.new_version }}\"/" setup.py
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add setup.py
-          git commit -m "chore: bump version to ${{ steps.new_version.outputs.new_version }}"
-          git push
