chore: add .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -2,22 +2,29 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
-# Distribution / packaging
-dist/
+*.so
+.Python
 build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
 *.egg-info/
+.installed.cfg
+*.egg
 
 # Virtual Environment
 venv/
-env/
 ENV/
-
-# Testing
-.coverage
-coverage.xml
-htmlcov/
-.pytest_cache/
+env/
+.env
 
 # IDE
 .idea/
@@ -25,9 +32,20 @@ htmlcov/
 *.swp
 *.swo
 
-# Logs
-*.log
+# Testing
+.coverage
+coverage.xml
+.pytest_cache/
+htmlcov/
 
-# Local development settings
-.env
-.env.local 
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Project specific
+.notes/ 
