--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -11,40 +11,103 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      packages: write
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with:
-          node-version: "20"
+          python-version: "3.10"
 
-      - name: Install conventional-changelog
-        run: npm install -g conventional-changelog-cli
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install Python dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install python-semantic-release
 
-      - name: Generate changelog
+      - name: Get current version
+        id: get_version
         run: |
-          conventional-changelog -p conventionalcommits -i CHANGELOG.md -s
+          CURRENT_VERSION=$(grep 'version = ' setup.py | cut -d'"' -f2)
+          echo "current_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
 
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v6
+      - name: Determine version bump
+        id: bump_version
+        run: |
+          COMMITS=$(git log --format=%B ${{ steps.get_version.outputs.current_version }}..HEAD)
+          if echo "$COMMITS" | grep -q "BREAKING CHANGE"; then
+            echo "bump=major" >> $GITHUB_OUTPUT
+          elif echo "$COMMITS" | grep -q "^feat:"; then
+            echo "bump=minor" >> $GITHUB_OUTPUT
+          elif echo "$COMMITS" | grep -q "^fix:"; then
+            echo "bump=patch" >> $GITHUB_OUTPUT
+          else
+            echo "bump=none" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Calculate new version
+        id: new_version
+        run: |
+          CURRENT=${{ steps.get_version.outputs.current_version }}
+          BUMP=${{ steps.bump_version.outputs.bump }}
+          if [ "$BUMP" = "none" ]; then
+            echo "new_version=$CURRENT" >> $GITHUB_OUTPUT
+          else
+            IFS='.' read -r major minor patch <<< "$CURRENT"
+            case $BUMP in
+              major)
+                echo "new_version=$((major + 1)).0.0" >> $GITHUB_OUTPUT
+                ;;
+              minor)
+                echo "new_version=$major.$((minor + 1)).0" >> $GITHUB_OUTPUT
+                ;;
+              patch)
+                echo "new_version=$major.$minor.$((patch + 1))" >> $GITHUB_OUTPUT
+                ;;
+            esac
+          fi
+
+      - name: Create Release
+        if: steps.bump_version.outputs.bump != 'none'
+        uses: softprops/action-gh-release@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "chore: update changelog"
-          title: "chore: update changelog"
-          body: "Automatically generated changelog"
-          branch: "chore/update-changelog"
-          base: "main"
-          labels: "chore,documentation"
+          tag_name: v${{ steps.new_version.outputs.new_version }}
+          name: Release v${{ steps.new_version.outputs.new_version }}
+          body: |
+            ## What's Changed
+
+            ${{ steps.bump_version.outputs.bump }} version bump
+
+            ### Commits
+            $(git log --format="- %s" ${{ steps.get_version.outputs.current_version }}..HEAD)
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Update version in setup.py
+        if: steps.bump_version.outputs.bump != 'none'
+        run: |
+          sed -i "s/version = \".*\"/version = \"${{ steps.new_version.outputs.new_version }}\"/" setup.py
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add setup.py
+          git commit -m "chore: bump version to ${{ steps.new_version.outputs.new_version }}"
+          git push
+
+      - name: Update Homebrew formula
+        if: steps.bump_version.outputs.bump != 'none'
+        run: |
+          git clone https://github.com/Homebrew/homebrew-core.git
+          cd homebrew-core
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          brew update
+          brew bump-formula-pr --version=${{ steps.new_version.outputs.new_version }} crules
+        env:
+          HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.HOMEBREW_GITHUB_API_TOKEN }}
