--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,86 +8,26 @@ on:
 
 jobs:
   test:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.9, 3.10, 3.11]
+
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
         with:
-          python-version: "3.11"
-          cache: "pip"
-
-      - name: Cache pip packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - name: Debug directory structure
-        run: |
-          pwd
-          ls -la
-
+          python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -e . --verbose
-          pip install black==23.12.1 isort flake8 pytest pytest-cov
-
-      - name: Check code formatting with black
+          pip install -e .
+          pip install pytest pytest-cov
+      - name: Run tests
         run: |
-          python -m black --check --verbose crules
-
-      - name: Check import sorting with isort
-        run: |
-          isort . --check-only
-
-      - name: Lint with flake8
-        run: |
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-
-      - name: Debug test directory
-        run: |
-          ls -la crules/tests
-          ls -la crules/tests/unit
-
-      - name: Test with pytest and generate coverage report
-        run: |
-          python -m pytest crules/tests/unit -v --cov=crules --cov-report=xml
-
-      - name: Upload coverage report
-        uses: codecov/codecov-action@v3
-        continue-on-error: true
+          pytest --cov=src tests/
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
         with:
-          file: ./coverage.xml
-          fail_ci_if_error: false
-
-  build:
-    runs-on: macos-latest
-    needs: test
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
-
-      - name: Install build dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install build
-
-      - name: Build package
-        run: |
-          python -m build
-
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist
-          path: dist/
+          fail_ci_if_error: true
