--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,11 +1,24 @@
+-r requirements.txt
+
+# テスト関連
 pytest>=7.0.0
 pytest-cov>=4.0.0
-flake8>=6.0.0
+pytest-mock>=3.0.0
+pytest-xdist>=3.0.0
+
+# コード品質
 black>=23.0.0
-isort>=5.12.0
+isort>=5.0.0
+flake8>=6.0.0
 mypy>=1.0.0
 bandit>=1.7.0
-safety>=2.3.0
-pip-audit>=2.4.0
-python-dotenv>=1.0.0
-sphinx>=7.0.0 
+safety>=2.0.0
+
+# ドキュメント
+sphinx>=7.0.0
+sphinx-rtd-theme>=1.0.0
+sphinx-autodoc-typehints>=1.0.0
+
+# 開発ツール
+pre-commit>=3.0.0
+tox>=4.0.0 
