--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
-click==8.1.7
-pyyaml==6.0.1
-markdown==3.4.3
-pytest>=7.0.0
-black==23.11.0
-flake8==6.1.0
-pytest-cov>=4.0.0
-python-semantic-release==8.7.0
-coverage>=7.0.0
+# 必須パッケージ
+click>=8.0.0        # CLIフレームワーク
+pyyaml>=6.0.0      # YAML処理
+jinja2>=3.0.0      # テンプレート処理
+
+# 開発パッケージ
+pytest>=7.0.0      # テストフレームワーク
+pytest-cov>=4.0.0  # カバレッジツール
+black>=23.0.0      # コードフォーマッター
+isort>=5.0.0       # インポートソートツール
+flake8>=6.0.0      # リンター
+mypy>=1.0.0        # 型チェッカー
+
+# 追加の依存関係
+# ここに必要な他の依存関係を追加できます 
