--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,24 +1,25 @@
+# 基本依存関係
 -r requirements.txt
 
 # テスト関連
-pytest>=7.0.0
-pytest-cov>=4.0.0
-pytest-mock>=3.0.0
-pytest-xdist>=3.0.0
+pytest==7.4.0
+pytest-cov==4.1.0
+pytest-mock==3.11.1
+pytest-xdist==3.3.1
 
 # コード品質
-black>=23.0.0
-isort>=5.0.0
-flake8>=6.0.0
-mypy>=1.0.0
-bandit>=1.7.0
-safety>=2.0.0
+black==23.7.0
+isort==5.12.0
+flake8==6.1.0
+mypy==1.5.1
+bandit==1.7.5
+safety==2.3.5
 
 # ドキュメント
-sphinx>=7.0.0
-sphinx-rtd-theme>=1.0.0
-sphinx-autodoc-typehints>=1.0.0
+sphinx==7.1.2
+sphinx-rtd-theme==1.3.0
+sphinx-autodoc-typehints==1.24.0
 
 # 開発ツール
-pre-commit>=3.0.0
-tox>=4.0.0 
+pre-commit==3.3.3
+tox==4.11.1 
