--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.9, 3.10, 3.11]
+      fail-fast: false
 
     steps:
       - uses: actions/checkout@v4
@@ -20,13 +21,19 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: "pip"
+          cache-dependency-path: |
+            requirements.txt
+            requirements-dev.txt
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip wheel setuptools
           pip install -e .
           pip install -r requirements-dev.txt
-      - name: Run tests
+      - name: Run tests and quality checks
         run: |
+          black --check src tests
+          flake8 src tests
+          bandit -r src
           pytest --cov=src tests/
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
