--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,11 @@ jobs:
           python -m pip install --upgrade pip wheel setuptools
           pip install -e .
           pip install -r requirements-dev.txt
+      - name: Format code
+        run: |
+          black src tests
       - name: Run tests and quality checks
         run: |
-          black --check src tests
           flake8 src tests
           bandit -r src
           pytest --cov=src tests/
