Fix GitHub Actions workflow: Update flake8 settings and remove Python 3.1 job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
           black src tests
       - name: Run tests and quality checks
         run: |
-          flake8 src tests
+          flake8 --max-line-length=100 src tests
           bandit -r src
           pytest --cov=src tests/
       - name: Upload coverage to Codecov
