Update test configuration: Remove coverage report from CI and add local coverage settings

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,4 +36,4 @@ jobs:
         run: |
           flake8 --max-line-length=100 src tests
           bandit -r src
-          pytest tests/ --no-cov
+          pytest tests/ -v
