--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,13 +36,4 @@ jobs:
         run: |
           flake8 --max-line-length=100 src tests
           bandit -r src
-          pytest --cov=src --cov-report=xml tests/
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage.xml
-          flags: unittests
-          name: codecov-umbrella
-          fail_ci_if_error: false
-          verbose: true
+          pytest --cov=src --cov-report=term-missing tests/ -v
