--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,35 +5,44 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  release:
+    types: [published]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.9", "3.10", "3.11"]
-      fail-fast: false
+    runs-on: macos-latest
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
+
+      - name: Set up Homebrew
+        uses: Homebrew/actions/setup-homebrew@master
+
+      - name: Test Formula
+        run: |
+          brew audit --strict Formula/crules.rb
+          brew style Formula/crules.rb
+
+  update-sha:
+    needs: test
+    if: github.event_name == 'release'
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
         with:
-          python-version: ${{ matrix.python-version }}
-          cache: "pip"
-          cache-dependency-path: |
-            requirements.txt
-            requirements-dev.txt
-      - name: Install dependencies
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Update SHA
         run: |
-          python -m pip install --upgrade pip wheel setuptools
-          pip install -e .
-          pip install -r requirements-dev.txt
-      - name: Format code
+          VERSION=${GITHUB_REF#refs/tags/}
+          curl -L "https://github.com/tirano-tirano/crules/archive/refs/tags/${VERSION}.tar.gz" | shasum -a 256 | cut -d ' ' -f 1 > sha.txt
+          sed -i "s/sha256 \"placeholder\"/sha256 \"$(cat sha.txt)\"/" Formula/crules.rb
+
+      - name: Commit and push changes
         run: |
-          black src tests
-      - name: Run tests and quality checks
-        run: |
-          flake8 --max-line-length=100 src tests
-          bandit -r src
-          pytest --cov=src --cov-report=term-missing tests/ -v
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
+          git add Formula/crules.rb
+          git commit -m "Update SHA for version ${GITHUB_REF#refs/tags/}"
+          git push
